examples/errors/parsing/type-comma-params.cn
type Pair(a, ) = { MkPair : (a * a) }

main : () [impure] = ()
